# nganu.mp

./: .gitignore  .gitmodules  AGENTS.md  LUA_API.md  PROJECT.md  PROTOCOL_ASSET_FLOW.md  VERIFICATION_CHECKLIST.md  build.sh  laporan-analisa-project.md  progress.md
.github/workflows/: build.yml  linux-build.yml
nganu.atlas/: CMakeLists.txt  README.md
nganu.atlas/src/: AtlasEditor.cpp  AtlasEditor.h  main.cpp
nganu.editor/: CMakeLists.txt  README.md
nganu.editor/src/: EditorApp.cpp  EditorApp.h  EditorUi.cpp  EditorUi.h  main.cpp
nganu.game/: CMakeLists.txt  README.md
nganu.game/src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameContent.cpp  InventoryState.h  InventoryUi.cpp  InventoryUi.h  ItemDefs.cpp  ItemDefs.h  ModalDialogUi.cpp  ModalDialogUi.h  NetworkClient.cpp  NetworkClient.h  ObjectiveUi.cpp  ObjectiveUi.h  Protocol.h  World.cpp  World.h  main.cpp
nganu.game/src/ui/: UiDataStore.cpp  UiDataStore.h  UiSystem.cpp  UiSystem.h  UiTheme.cpp  UiTheme.h  UiTypes.h  UiWindowConfig.cpp  UiWindowConfig.h
nganu.mp/: CMakeLists.txt  README.md  server.cfg  server.test.cfg
nganu.mp/assets/data/: item_defs.json
nganu.mp/assets/data/ui/: inventory_main.json  objective_journal.json  system_modal.json  theme_default.json
nganu.mp/assets/map_images/: base_out_atlas.atlas  terrain_atlas.atlas
nganu.mp/assets/maps/: FORMAT.md  crossroads.map  crossroads.tmx  new_map.map  new_map.tmx  overworld.map  overworld.tmx  starter_field.map  starter_field.tmx
nganu.mp/assets/ui/: theme_default.atlas
nganu.mp/plugins/example_plugin/: CMakeLists.txt  plugin.cpp
nganu.mp/scripts/: main.lua
nganu.mp/scripts/maps/: crossroads_main.lua  greenfields_main.lua  overworld_main.lua
nganu.mp/scripts/npc/: luna.lua
nganu.mp/scripts/quests/: starter_quest.lua
nganu.mp/scripts/runtime/: map_objects.lua
nganu.mp/scripts/triggers/: starter_road.lua
nganu.mp/src/: main.cpp
nganu.mp/src/core/: ContentRevision.cpp  ContentRevision.h  Logger.h  MapData.cpp  MapData.h  MovementValidation.cpp  MovementValidation.h  Runtime.cpp  Runtime.h  Server.cpp  Server.h  ServerContent.cpp
nganu.mp/src/inventory/: InventoryService.cpp  InventoryService.h
nganu.mp/src/network/: Network.cpp  Network.h  Packet.cpp  Packet.h
nganu.mp/src/plugin/: PluginAPI.h  PluginManager.cpp  PluginManager.h
nganu.mp/src/script/: Builtins.cpp  Builtins.h  LuaRuntime.cpp  LuaRuntime.h
raymob/: gradle.properties
raymob/app/: build.gradle  proguard-rules.pro
raymob/app/src/main/: AndroidManifest.xml
raymob/app/src/main/cpp/: CMakeLists.txt
raymob/app/src/main/java/com/raylib/raymob/: NativeLoader.java  SoftKeyboard.java
raymob/app/src/main/res/values/: styles.xml
raymob/app/src/main/res/values-v31/: styles.xml
shared/: ContentIntegrity.h  JsonRuntime.h  MapFormat.cpp  MapFormat.h  Protocol.h
